--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
-{ "homepage": "https://katesunday.github.io/todoList-ts/",
+{
+  "homepage": "https://katesunday.github.io/todoList-ts/",
   "name": "todolist-ts",
   "version": "0.1.0",
   "private": true,
@@ -6,24 +7,24 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^24.0.0",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
+    "@types/jest": "^27.4.1",
+    "@types/node": "^16.11.26",
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.13",
     "@types/uuid": "^8.3.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
-    "typescript": "~3.7.2",
+    "typescript": "^4.6.2",
     "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
-    "build": "react-scripts build",
+    "build": "react-scripts build --openssl-legacy-provider start",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "predeploy": "npm run build --openssl-legacy-provider start",
+    "deploy": "gh-pages -d build --openssl-legacy-provider start"
   },
   "eslintConfig": {
     "extends": "react-app"
