--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.13",
+    "@types/react-redux": "^7.1.24",
     "@types/uuid": "^8.3.4",
     "gh-pages": "^3.2.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^8.0.1",
     "react-scripts": "3.4.1",
-    "typescript": "^4.6.2",
+    "redux": "^4.2.0",
+    "typescript": "^4.6.4",
     "uuid": "^8.3.2",
     "yarn": "^1.22.17"
   },
