--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 9009 -s public",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build",
     "build-storybook": "build-storybook -s public",
     "jest:integration": "jest -c integration/jest.config.js",
     "test:integration": "start-server-and-test storybook http-get://localhost:9009 jest:integration"
@@ -76,6 +78,7 @@
     "@storybook/preset-create-react-app": "^3.2.0",
     "@storybook/react": "^6.5.0",
     "@storybook/testing-library": "^0.0.11",
+    "gh-pages": "^4.0.0",
     "jest-image-snapshot": "^4.5.1",
     "jest-puppeteer": "^6.1.0",
     "puppeteer": "^14.1.0",
