--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@types/react-redux": "^7.1.16",
     "@types/uuid": "^7.0.3",
     "axios": "^0.27.2",
+    "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.3",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.4.1",
