--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.8.0",
     "@mui/material": "^5.8.0",
+    "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -26,7 +27,7 @@
     "react-scripts": "5.0.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.4.1",
-    "typescript": "^4.1.2",
+    "typescript": "^4.7.4",
     "uuid": "^8.0.0",
     "web-vitals": "^1.0.1",
     "yarn": "^1.22.17"
